--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -44,20 +44,29 @@
                                 </tr>
                                 <!-- Functions Section -->
                                 <tr>
-                                    <td class="heading" colspan="2">Functions</td>
+                                    <td class="heading" colspan="2">Function</td>
                                 </tr>
                                 <tr>
                                     <td class="label">Form</td>
                                     <td>{{ equation }}</td>
                                 </tr>
+                                <!-- Initial Parameters Section -->
                                 <tr>
-                                    <td class="label">Initial Parameters</td>
-                                    {% if list_params %}
-                                        <td>{{ initial_guess }}</td>
-                                    {% else %}
-                                        <td>Too many parameters to display</td>
-                                    {% endif %}
+                                    <td class="heading" colspan="2">Initial Parameters</td>
                                 </tr>
+                                {% if list_params %}
+                                    {% for param in initial_guess.split(", ") %}
+                                        {% set key, value = param.split("=") %}
+                                        <tr>
+                                            <td class="label">{{ key.strip() }}</td>
+                                            <td>{{ value.strip() }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                {% else %}
+                                <tr>
+                                    <td colspan="2">Too many parameters to display</td>
+                                </tr>
+                                {% endif %}
                             </tbody>
                         </table>
                         <div class="row">
@@ -115,20 +124,29 @@
                             </tr>
                             <!-- Functions Section -->
                             <tr>
-                                <td class="heading" colspan="2">Functions</td>
+                                <td class="heading" colspan="2">Function</td>
                             </tr>
                             <tr>
                                 <td class="label">Form</td>
                                 <td>{{ equation }}</td>
                             </tr>
+                            <!-- Fitted Parameters Section -->
                             <tr>
-                                <td class="label">Fitted Parameters</td>
-                                {% if list_params %}
-                                    <td>{{ min_params }}</td>
-                                {% else %}
-                                    <td>Too many parameters to display</td>
-                                {% endif %}
+                                <td class="heading" colspan="2">Fitted Parameters</td>
                             </tr>
+                            {% if list_params %}
+                                {% for param in min_params.split(", ") %}
+                                    {% set key, value = param.split("=") %}
+                                    <tr>
+                                        <td class="label">{{ key.strip() }}</td>
+                                        <td>{{ value.strip() }}</td>
+                                    </tr>
+                                {% endfor %}
+                            {% else %}
+                            <tr>
+                                <td colspan="2">Too many parameters to display</td>
+                            </tr>
+                            {% endif %}
                         </tbody>
                     </table>
                     <div align="center" class="figure align-center">
