Updated the templates to fix the failing system tests for multifit datasets

--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -149,12 +149,14 @@
                                     <td class="heading" colspan="2">Best Parameters</td>
                                 </tr>
                                 {% if list_params %}
-                                    {% for param in min_params.split(", ") %}
-                                        {% set key, value = param.split("=") %}
-                                        <tr>
-                                            <td class="label">{{ key.strip() }}</td>
-                                            <td>{{ value.strip() }}</td>
-                                        </tr>
+                                    {% for param in min_params.replace("], ", "]||").split("||") %}
+                                        {% if "=" in param %}
+                                            {% set key, value = param.split("=", 1) %}
+                                            <tr>
+                                                <td class="label">{{ key.strip() }}</td>
+                                                <td>{{ value.strip() }}</td>
+                                            </tr>
+                                        {% endif %}
                                     {% endfor %}
                                 {% else %}
                                 <tr>
@@ -210,12 +212,14 @@
                                         <td class="heading" colspan="2">Best Parameters</td>
                                     </tr>
                                     {% if list_params %}
-                                        {% for param in min_params.split(", ") %}
-                                            {% set key, value = param.split("=") %}
-                                            <tr>
-                                                <td class="label">{{ key.strip() }}</td>
-                                                <td>{{ value.strip() }}</td>
-                                            </tr>
+                                        {% for param in min_params.replace("], ", "]||").split("||") %}
+                                            {% if "=" in param %}
+                                                {% set key, value = param.split("=", 1) %}
+                                                <tr>
+                                                    <td class="label">{{ key.strip() }}</td>
+                                                    <td>{{ value.strip() }}</td>
+                                                </tr>
+                                            {% endif %}
                                         {% endfor %}
                                     {% else %}
                                     <tr>
