--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -135,12 +135,14 @@
                                 <td class="heading" colspan="2">Fitted Parameters</td>
                             </tr>
                             {% if list_params %}
-                                {% for param in min_params.split(", ") %}
-                                    {% set key, value = param.split("=") %}
-                                    <tr>
-                                        <td class="label">{{ key.strip() }}</td>
-                                        <td>{{ value.strip() }}</td>
-                                    </tr>
+                                {% for param in min_params.replace("], ", "]||").split("||") %}
+                                    {% if "=" in param %}
+                                        {% set key, value = param.split("=", 1) %}
+                                        <tr>
+                                            <td class="label">{{ key.strip() }}</td>
+                                            <td>{{ value.strip() }}</td>
+                                        </tr>
+                                    {% endif %}
                                 {% endfor %}
                             {% else %}
                             <tr>
