Updated fitting result tables to show initial and fitted parameters side by side for a better ux

--- a/fitbenchmarking/templates/css/custom_style.css
+++ b/fitbenchmarking/templates/css/custom_style.css
@@ -135,6 +135,12 @@ a {
   color: white;
 }
 
+.simple-table .subheading {
+  font-weight: bold;
+  background-color:#c2bfbf;
+  color: white;
+}
+
 .table-row {
   display: flex;
   flex-wrap: wrap;
