Fix comparison plots for SpinW

--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -92,7 +92,7 @@
                             functions. Colours are used to distinguish between fits
                             obtained using each cost function. Within a cost function,
                             the minimizer which produced closest fit is in bold and
-                            the other minimizers are shown as thinner lines for context.
+                            the other minimizers are shown as thinner dashed lines for context.
                             <br>Please note that this plot is intended for use as an
                             indication of the variety of the fits that were obtained
                             for specific details, please consult the individual support
