--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -17,72 +17,6 @@
                 </div>
                 <p>{{ description }}</p>
                 <hr>
-                <section class="accordion">
-                    <input type="checkbox" name="collapse" id="start-accordion" checked="checked">
-                    <h2 class="handle">
-                        <label for="start-accordion">Problem Outline</label>
-                    </h2>
-                    <br>
-                    <div class="content">
-                        <table class="simple-table">
-                            <colgroup>
-                                <col width="30%" />
-                                <col width="70%" />
-                            </colgroup>
-                            <tbody valign="top">
-                                <!-- Summary Section -->
-                                <tr>
-                                    <td class="heading" colspan="2">Summary</td>
-                                </tr>
-                                <tr>
-                                    <td class="label">Number of parameters</td>
-                                    <td>{{ n_params }}</td>
-                                </tr>
-                                <tr>
-                                    <td class="label">Number of data points</td>
-                                    <td>{{ n_data_points }}</td>
-                                </tr>
-                                <!-- Functions Section -->
-                                <tr>
-                                    <td class="heading" colspan="2">Function</td>
-                                </tr>
-                                <tr>
-                                    <td class="label">Form</td>
-                                    <td>{{ equation }}</td>
-                                </tr>
-                                <!-- Initial Parameters Section -->
-                                <tr>
-                                    <td class="heading" colspan="2">Initial Parameters</td>
-                                </tr>
-                                {% if list_params %}
-                                    {% for param in initial_guess.split(", ") %}
-                                        {% set key, value = param.split("=") %}
-                                        <tr>
-                                            <td class="label">{{ key.strip() }}</td>
-                                            <td>{{ value.strip() }}</td>
-                                        </tr>
-                                    {% endfor %}
-                                {% else %}
-                                <tr>
-                                    <td colspan="2">Too many parameters to display</td>
-                                </tr>
-                                {% endif %}
-                            </tbody>
-                        </table>
-                        <div class="row">
-                            {% if initial_plot_available %}
-                                <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ initial_plot }}"></iframe>
-                            {% else %}
-                                <h3>{{ initial_plot }}</h3>
-                            {% endif %}
-                        </div>
-                    </div>
-                </section>
-            <section class="accordion">
-                <input type="checkbox" name="collapse" id="fitting-results-accordion" checked="checked">
-                <h2 class="handle">
-                    <label for="fitting-results-accordion">Fitting Results</label>
-                </h2>
                 <div class="content">
                     {% if is_best_fit %}
                         <p>This is the <span class="pill">best</span> fit of the minimizers used.</p>
@@ -96,13 +30,25 @@
                             <col width="25%" />
                         </colgroup>
                         <tbody valign="top">
-                            <!-- Summary Section -->
+                            <!-- Problem Outline Section -->
                             <tr>
-                                <td class="heading" colspan="4">Summary</td>
+                                <td class="heading" colspan="4">Problem Outline</td>
+                            </tr>
+                            <tr>
+                                <td class="label">Number of parameters</td>
+                                <td colspan="3">{{ n_params }}</td>
+                            </tr>
+                            <tr>
+                                <td class="label">Number of data points</td>
+                                <td colspan="3">{{ n_data_points }}</td>
                             </tr>
                             <tr>
                                 <td class="label">Minimizer</td>
                                 <td colspan="3">{{ minimizer }}</td>
+                            </tr>
+                            <!-- Summary Section -->
+                            <tr>
+                                <td class="heading" colspan="4">Fitting Metrics</td>
                             </tr>
                             <tr>
                                 <td class="label">Accuracy</td>
@@ -186,7 +132,6 @@
                         </button>
                     </div>
                 </div>
-            </section>
         </div>
     </body>
 </html>
