--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -114,6 +114,12 @@
                         <div align="center" class="figure align-center">
                             <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ residuals_plot }}"></iframe>
                         </div>
+                        {% if plot_2d_available %}
+                            <div align="center" class="figure align-center">
+                                <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ plot_2d_data }}"></iframe>
+                            </div>  
+                        {% endif %}                      
+
                     {% else %}
                         <div align="center" class="figure align-center">
                             <h3>{{ rerun_make_plots_msg }}</h3>
