--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -60,7 +60,7 @@
                                     {{ minimizer_dropdown }}
                                 {% endif %}
                             </div>
-                            <div>
+                            <div class="checkbox-row">
                                 {{ runtime_dropdown }}
                                 {{ probsize_checkbox }}
                             </div>
