Added new dropdown menus for filtering the software and cost function results (#1476)
* Added the software dropdown menu for filtering results

* Updated the expected results of the default tests

* Updated styles

* Updated logic to handle edge cases

* Added logic for toggle cost function

* Updated logic

* Updated logic to handle edge cases

* fixed more edge cases

* Updated the logic to handle the case where error in data cel

* Added note

--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -50,7 +50,11 @@
                         <center>
                             <div>
                                 {{ problem_dropdown }}
+                                {{ costfunc_dropdown }}
+                                {{ software_dropdown }}
                                 {{ minimizer_dropdown }}
+                            </div>
+                            <div class="checkbox-row">
                                 {{ runtime_dropdown }}
                                 {{ probsize_checkbox }}
                             </div>
