--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -20,67 +20,6 @@
             <p>{{ description }}</p>
             <hr>
             <section class="accordion">
-                <input type="checkbox" name="collapse" id="start-accordion" checked="checked">
-                <h2 class="handle">
-                    <label for="start-accordion">Problem Outline</label>
-                </h2>
-                <div class="content">
-                    <br>
-                    <table class="simple-table">
-                        <colgroup>
-                            <col width="30%" />
-                            <col width="70%" />
-                        </colgroup>
-                        <tbody valign="top">
-                            <!-- Summary Section -->
-                            <tr>
-                                <td class="heading" colspan="2">Summary</td>
-                            </tr>
-                            <tr>
-                                <td class="label">Number of parameters</td>
-                                <td>{{ n_params }}</td>
-                            </tr>
-                            <tr>
-                                <td class="label">Number of data points</td>
-                                <td>{{ n_data_points }}</td>
-                            </tr>
-                            <!-- Functions Section -->
-                            <tr>
-                                <td class="heading" colspan="2">Function</td>
-                            </tr>
-                            <tr>
-                                <td class="label">Form</td>
-                                <td>{{ equation }}</td>
-                            </tr>
-                            <!-- Initial Parameters Section -->
-                            <tr>
-                                <td class="heading" colspan="2">Initial Parameters</td>
-                            </tr>
-                            {% if list_params %}
-                                {% for param in initial_guess.split(", ") %}
-                                    {% set key, value = param.split("=") %}
-                                    <tr>
-                                        <td class="label">{{ key.strip() }}</td>
-                                        <td>{{ value.strip() }}</td>
-                                    </tr>
-                                {% endfor %}
-                            {% else %}
-                            <tr>
-                                <td colspan="2">Too many parameters to display</td>
-                            </tr>
-                            {% endif %}
-                        </tbody>
-                    </table>
-                    <div class="row">
-                      {% if initial_plot_available %}
-		       <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ initial_plot }}"></iframe>
-                      {% else %}
-                        <h3>{{ initial_plot }}</h3>
-                      {% endif %}
-                    </div>
-                </div>
-            </section>
-            <section class="accordion">
                 <input type="checkbox" name="collapse" id="comparison-accordion" checked="checked">
                 <h2 class="handle">
                     <label for="comparison-accordion">Comparison</label>
@@ -151,41 +90,65 @@
                         <br>
                         <table class="simple-table">
                             <colgroup>
-                                <col width="30%" />
-                                <col width="70%" />
+                                <col width="25%" />
+                                <col width="25%" />
+                                <col width="25%" />
+                                <col width="25%" />
                             </colgroup>
                             <tbody valign="top">
                                 <!-- Summary Section -->
                                 <tr>
-                                    <td class="heading" colspan="2">Summary</td>
+                                    <td class="heading" colspan="4">Summary</td>
+                                </tr>
+                                <tr>
+                                    <td class="label">Number of parameters</td>
+                                    <td colspan="3">{{ n_params }}</td>
+                                </tr>
+                                <tr>
+                                    <td class="label">Number of data points</td>
+                                    <td colspan="3">{{ n_data_points }}</td>
                                 </tr>
                                 <tr>
                                     <td class="label">Minimizer</td>
-                                    <td>{{ best_results[0].modified_minimizer_name(True) }}</td>
+                                    <td colspan="3">{{ best_results[0].modified_minimizer_name(True) }}</td>
                                 </tr>
                                 <!-- Functions Section -->
                                 <tr>
-                                    <td class="heading" colspan="2">Function</td>
+                                    <td class="heading" colspan="4">Function</td>
                                 </tr>
                                 <tr>
                                     <td class="label">Form</td>
-                                    <td>{{ equation }}</td>
+                                    <td colspan="3">{{ equation }}</td>
                                 </tr>
-                                <!-- Best Parameters Section -->
+                                <!-- Parameters Section -->
                                 <tr>
-                                    <td class="heading" colspan="2">Best Parameters</td>
+                                    <td class="heading" colspan="4">Parameters</td>
                                 </tr>
-                                {% if list_params %}                                    
-                                    {% for param in min_params.split(", ") %}
-                                        {% set key, value = param.split("=") %}
+                                <tr>
+                                    <td class="subheading">Name</td>
+                                    <td class="subheading">Initial value</td>
+                                    <td class="subheading">Best value</td>
+                                    <td class="subheading">Change (Δ)</td>
+                                </tr>
+
+                                {% if list_params %}
+                                    {% set initial_list = initial_guess.split(", ") %}
+                                    {% set fitted_list = min_params.split(", ") %}
+
+                                    {% for init in initial_list %}
+                                        {% set fit = fitted_list[loop.index0] %}
+                                        {% set init_key, init_value = init.split("=") %}
+                                        {% set fit_key, fit_value = fit.split("=") %}
                                         <tr>
-                                            <td class="label">{{ key.strip() }}</td>
-                                            <td>{{ value.strip() }}</td>
+                                            <td class="label">{{ init_key.strip() }}</td>
+                                            <td>{{ init_value.strip() }}</td>
+                                            <td>{{ fit_value.strip() }}</td>
+                                            <td>{{ fit_value.strip()|float - init_value.strip()|float }}</td>
                                         </tr>
                                     {% endfor %}
                                 {% else %}
                                 <tr>
-                                    <td colspan="2">Too many parameters to display</td>
+                                    <td colspan="4">Too many parameters to display</td>
                                 </tr>
                                 {% endif %}
                             </tbody>
@@ -212,41 +175,65 @@
                             <br>
                             <table class="simple-table">
                                 <colgroup>
-                                    <col width="30%" />
-                                    <col width="70%" />
+                                    <col width="25%" />
+                                    <col width="25%" />
+                                    <col width="25%" />
+                                    <col width="25%" />
                                 </colgroup>
                                 <tbody valign="top">
                                     <!-- Summary Section -->
                                     <tr>
-                                        <td class="heading" colspan="2">Summary</td>
+                                        <td class="heading" colspan="4">Summary</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="label">Number of parameters</td>
+                                        <td colspan="3">{{ n_params }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="label">Number of data points</td>
+                                        <td colspan="3">{{ n_data_points }}</td>
                                     </tr>
                                     <tr>
                                         <td class="label">Minimizer</td>
-                                        <td>{{ best_results[loop.index0].modified_minimizer_name(True)}}</td>
+                                        <td colspan="3">{{ best_results[loop.index0].modified_minimizer_name(True)}}</td>
                                     </tr>
                                     <!-- Functions Section -->
                                     <tr>
-                                        <td class="heading" colspan="2">Function</td>
+                                        <td class="heading" colspan="4">Function</td>
                                     </tr>
                                     <tr>
                                         <td class="label">Form</td>
-                                        <td>{{ equation }}</td>
+                                        <td colspan="3">{{ equation }}</td>
                                     </tr>
-                                    <!-- Best Parameters Section -->
+                                     <!-- Parameters Section -->
                                     <tr>
-                                        <td class="heading" colspan="2">Best Parameters</td>
+                                        <td class="heading" colspan="4">Parameters</td>
                                     </tr>
+                                    <tr>
+                                        <td class="subheading">Name</td>
+                                        <td class="subheading">Initial value</td>
+                                        <td class="subheading">Best value</td>
+                                        <td class="subheading">Change (Δ)</td>
+                                    </tr>
+
                                     {% if list_params %}
-                                        {% for param in min_params.split(", ") %}
-                                            {% set key, value = param.split("=") %}
+                                        {% set initial_list = initial_guess.split(", ") %}
+                                        {% set fitted_list = min_params.split(", ") %}
+
+                                        {% for init in initial_list %}
+                                            {% set fit = fitted_list[loop.index0] %}
+                                            {% set init_key, init_value = init.split("=") %}
+                                            {% set fit_key, fit_value = fit.split("=") %}
                                             <tr>
-                                                <td class="label">{{ key.strip() }}</td>
-                                                <td>{{ value.strip() }}</td>
+                                                <td class="label">{{ init_key.strip() }}</td>
+                                                <td>{{ init_value.strip() }}</td>
+                                                <td>{{ fit_value.strip() }}</td>
+                                                <td>{{ fit_value.strip()|float - init_value.strip()|float }}</td>
                                             </tr>
                                         {% endfor %}
                                     {% else %}
                                     <tr>
-                                        <td colspan="2">Too many parameters to display</td>
+                                        <td colspan="4">Too many parameters to display</td>
                                     </tr>
                                     {% endif %}
                                 </tbody>
