Added the legend

--- a/fitbenchmarking/templates/problem_summary_page_template.html
+++ b/fitbenchmarking/templates/problem_summary_page_template.html
@@ -80,7 +80,8 @@
                                 The line traces shaded red are the starting values that did not
                                 lead to good fitting outcomes. While the line traces shaded blue
                                 are the ones that did. The data points are also displayed in the
-                                subplots.
+                                subplots. For the best visualization of the multistart plot,
+                                it is recommended to limit the number of sub plots to 9 or less.
                             </p>
                             <div align="center" class="figure align-center">
                                 <iframe width="100%" height="500" frameborder="0" seamless="seamless" scrolling="no" src="{{ multistart_plot }}"></iframe>
